--- a/public/landing_page_rss/assets/css/main.css
+++ b/public/landing_page_rss/assets/css/main.css
@@ -1,12 +1,12 @@
 :root {
     --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --primary-color: #4A69A5; /* Warna biru yang lebih lembut */
-    --primary-hover: #3E5A8E;
+    --primary-color: #4AA56D; /* Warna biru yang lebih lembut */
+    --primary-hover: #3E8E5A;
     --secondary-color: #f8f9fa;
     --text-color: #343a40;
     --light-gray: #e9ecef;
-    --accent-color: rgb(8 60 132 / 1);
-    --accent-color2: #F5D042;
+    --accent-color: #07553B;
+    --accent-color2: #CED46A
 }
 
 html {
@@ -72,7 +72,7 @@ body {
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(to bottom, #FFFFFF, #96b0e1);
+    background: linear-gradient(to bottom, #FFFFFF, #96E1B0);
     padding: 100px 0;
     min-height: 70vh;
     display: flex;
