update design simba

--- a/public/landing_page_rss/assets/css/main.css
+++ b/public/landing_page_rss/assets/css/main.css
@@ -560,7 +560,7 @@ body {
 }
 
 .ruangan-section {
-    background: linear-gradient(to bottom, #FFFFFF, #96b0e1);
+    background: linear-gradient(to bottom, #FFFFFF, var(--primary-color));
     min-height: 100vh;
     display: flex;
 }
